--- a/ScreenSaver/Info.plist
+++ b/ScreenSaver/Info.plist
@@ -17,7 +17,7 @@
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>NSPrincipalClass</key>
-    <string>LivingGlassView</string>
+    <string>LivingGlass.LivingGlassView</string>
     <key>NSHighResolutionCapable</key>
     <true/>
 </dict>
